Fix displaying booking slot on small screen Change into item width Refactor code

--- a/frontend/src/app/modules/bookings/booker/booker.component.sass
+++ b/frontend/src/app/modules/bookings/booker/booker.component.sass
@@ -20,3 +20,9 @@
 .title
     font-size: 1.15em
     white-space: nowrap
+
+@media only screen and (max-width: 600px)
+    .booker-card
+        border-right: none
+        border-top: 1px solid rgba($pale-sky, .4)
+        width: 100%
