--- a/frontend/src/app/modules/bookings/bookings-page/bookings-page.component.sass
+++ b/frontend/src/app/modules/bookings/bookings-page/bookings-page.component.sass
@@ -25,8 +25,7 @@ p, span
     color: $pale-sky
 
 .item
-    min-width: 20vw
-    width: 20vw
+    width: 20em
     background: white
     padding: 20px 29px
     display: flex
